--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="cat.css">
-    <link rel="stylesheet" href="cat.html">
+    <link rel="stylesheet" href="music-player.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -55,3 +55,8 @@
                 </tr>
             </table>
         </div>
+        
+    <!-- Scripts -->
+    <script src="music-player.js"></script>
+</body>
+</html>
