--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>☆*: .｡. o(≧▽≦)o .｡.:*☆</title>
 
+
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="cat.css">
     <link rel="stylesheet" href="music-player.css">
@@ -25,43 +26,35 @@
 
             <table>
                 <tr>
-                    <th colspan="12">Historia de usuario</th>
+                    <th colspan="19">Historia de usuario</th>
+                </tr>
+                <tr>
+                    <td colspan="3"><a href="https://github.com/Violelo09/user-history" target="_blank">Historia de usuario python</a></td>
+                    <td colspan="3"><a href="https://val-duque.github.io/Historia-de-usuario-2" target="_blank">Historia de usuario HTML</a></td>
+                    <td colspan="3"><a href="https://github.com/Val-Duque/historia-de-usuario-3" target="_blank">Historia de usuario JS</a></td>
                 </tr>
 
                 <tr>
-                    <td colspan="6"><a href="https://github.com/Violelo09/user-history" target="_blank">Historia de
-                            usuario python</a></td>
-                    <td colspan="6"><a href="https://val-duque.github.io/Historia-de-usuario-2/"
-                            target="_blank">Historia de usuario HTML</a></td>
+                    <th colspan="19">Ejercicios</th>
                 </tr>
-
                 <tr>
-                    <th colspan="12">Ejercicios</th>
-                </tr>
-
-                <tr>
-                    <td colspan="3"><a href="https://github.com/Violelo09/10-Ejercico-part1" target="_blank">
-                            <p>Ejercicios 1</p>
-                        </a></td>
-                    <td colspan="3"><a href="https://github.com/Violelo09/Galactic-Library-Keeper"
-                            target="_blank">Galactic-Library-Keeper<br></a></td>
-                    <td colspan="3"><a href="https://github.com/Violelo09/crudscope-html-mediapanel"
-                            target="_blank">html media panel</a></td>
-                    <td colspan="3"><a href="https://github.com/Violelo09/Ciclos-python/upload" target="_blank">Ciclos
-                            python</a></td>
-
+                    <td colspan="3"><a href="https://github.com/Violelo09/10-Ejercico-part1" target="_blank">Ejercicios 1</a></td>
+                    <td colspan="3"><a href="https://github.com/Violelo09/Galactic-Library-Keeper" target="_blank">Galactic-Library-Keeper</a></td>
+                    <td colspan="3"><a href="https://github.com/Violelo09/crudscope-html-mediapanel" target="_blank">HTML media panel</a></td>
+                    <td colspan="3"><a href="https://github.com/Violelo09/Ciclos-python/upload" target="_blank">Ciclos python</a></td>
+                    <td colspan="3"><a href="https://github.com/Val-Duque/Sintaxis-en-JavaScript" target="_blank">Sintaxis de js</a></td>
+                    <td colspan="3"><a href="https://github.com/Val-Duque/Simulador-interactivo.git" target="_blank">Simulador interactivo js</a></td>
                 </tr>
 
 
                 <tr>
-                    <th colspan="12">Trabajo en el equipo</th>
+                    <th colspan="19">Trabajo en el equipo</th>
                 </tr>
                 <tr>
                     <td colspan="4"><a href="https://github.com/Violelo09/EcoRide" target="_blank">EcoRide</a></td>
-                    <td colspan="4"><a href="https://github.com/Violelo09/Crudzaso_Games" target="_blank">Crudzaso
-                            Games</a></td>
-                    <td colspan="4"><a href="https://github.com/FaiberCamachoDev/Mini-OS-Ubuntu"
-                            target="_blank">Mini-OS-Ubuntu</a></td>
+                    <td colspan="4"><a href="https://github.com/Violelo09/Crudzaso_Games" target="_blank">Crudzaso Games</a></td>
+                    <td colspan="4"><a href="https://github.com/FaiberCamachoDev/Mini-OS-Ubuntu" target="_blank">Mini-OS-Ubuntu</a></td>
+                    <td colspan="4"><a href="https://github.com/Val-Duque/TaskFlow" target="_blank">TaskFlow</a></td>
                 </tr>
             </table>
         </div>
@@ -69,5 +62,4 @@
         <!-- Scripts -->
         <script src="music-player.js"></script>
 </body>
-
 </html>
